--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@highlight-run/next",
-    "version": "1.1.4",
+    "version": "1.1.5",
     "description": "Client for interfacing with Highlight in next.js",
     "main": "dist/index.js",
     "scripts": {
@@ -15,10 +15,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@highlight-run/node": "^1.1.2",
-        "next": "^12.0.7",
-        "npm-run-all": "^4.1.5",
+        "@highlight-run/node": "1.1.4",
+        "next": "^12.1.6",
+        "npm-run-all": "^4.1.5"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.23",
+        "eslint": "8.12.0",
         "prettier": "^2.5.1",
-        "typescript": "^4.5.5"
+        "typescript": "4.6.3"
     }
 }
