--- a/highlight-next/tsconfig.cjs.json
+++ b/highlight-next/tsconfig.cjs.json
@@ -3,6 +3,7 @@
 
     "compilerOptions": {
         "module": "commonjs",
-        "outDir": "dist"
+        "outDir": "dist",
+        "removeComments": true
     }
 }
