--- a/highlight-next/tsconfig.esm.json
+++ b/highlight-next/tsconfig.esm.json
@@ -3,6 +3,7 @@
 
     "compilerOptions": {
         "module": "es6",
-        "outDir": "esm"
+        "outDir": "esm",
+        "removeComments": true
     }
 }
