--- a/frontend/.stylelintrc.json
+++ b/frontend/.stylelintrc.json
@@ -6,16 +6,17 @@
         "stylelint-prettier/recommended"
     ],
     "rules": {
-        "indentation": null,
-        "selector-class-pattern": null,
-        "max-nesting-depth": null,
-        "scss/at-import-partial-extension-blacklist": null,
-        "selector-max-id": null,
         "color-no-hex": true,
-        "function-parentheses-space-inside": null,
-        "prettier/prettier": true,
+        "declaration-block-no-duplicate-properties": true,
         "declaration-block-semicolon-newline-after": null,
-        "selector-no-qualifying-type": null,
-        "declaration-block-no-duplicate-properties": true
+        "function-parentheses-space-inside": null,
+        "indentation": null,
+        "max-nesting-depth": null,
+        "prettier/prettier": true,
+        "rule-empty-line-before": null,
+        "scss/at-import-partial-extension-blacklist": null,
+        "selector-class-pattern": null,
+        "selector-max-id": null,
+        "selector-no-qualifying-type": null
     }
 }
