--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,10 @@
         "graphql": "^15.5.0",
         "highlight.run": "^4.2.7",
         "intro.js": "^4.1.0",
-        "intro.js-react": "^0.4.0",
+        "intro.js-react": "^0.6.0",
         "lottie-react": "^2.1.0",
         "moment": "2.29.4",
+        "prop-types": "^15.5.7",
         "query-string": "6.14.1",
         "randomcolor": "^0.6.2",
         "re-resizable": "^6.9.1",
@@ -131,8 +132,8 @@
         "@types/react-slider": "^1.3.1",
         "@types/react-syntax-highlighter": "^13.5.2",
         "@types/validator": "^13.1.3",
-        "@typescript-eslint/eslint-plugin": "^4.15.1",
-        "@typescript-eslint/parser": "^4.15.1",
+        "@typescript-eslint/eslint-plugin": "^5.30.6",
+        "@typescript-eslint/parser": "^5.30.6",
         "craco-antd": "^1.19.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^7.2.0",
@@ -151,6 +152,9 @@
         "stylelint-config-standard": "^26.0.0",
         "stylelint-prettier": "^2.0.0",
         "typed-scss-modules": "^3.4.0",
-        "typescript": "^4.6.3"
+        "typescript": "^4.7.4"
+    },
+    "resolutions": {
+        "**/postcss-custom-properties": "^12.1.7"
     }
 }
