--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
         "dev": "doppler run -- webpack serve --progress",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}'",
         "gql": "graphql-codegen --config --watch codegen.yml",
-        "test": "jest --passWithNoTests"
+        "test": "jest --passWithNoTests",
+        "lint-watch": "onchange 'src/**/*.{ts,tsx,scss}' -- prettier --check --write --ignore-unknown {{changed}}"
     },
     "repository": {
         "type": "git",
@@ -39,6 +40,7 @@
         "babel-loader": "^8.0.6",
         "eslint": "^6.8.0",
         "jest": "^26.6.3",
+        "onchange": "^7.1.0",
         "prettier": "^2.2.1",
         "ts-loader": "^8.0.12",
         "typescript": "^4.1.3",
