--- a/firstload/package.json
+++ b/firstload/package.json
@@ -1,6 +1,6 @@
 {
     "name": "highlight.run",
-    "version": "4.3.0-alpha",
+    "version": "4.3.1",
     "scripts": {
         "build": "rollup -c",
         "dev": "doppler run -- rollup -c -w",
