--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,10 @@
     },
     "homepage": "https://github.com/highlight-run/highlight#readme",
     "devDependencies": {
-        "@graphql-codegen/cli": "^2.6.2",
-        "@graphql-codegen/import-types-preset": "^2.1.20",
-        "@graphql-codegen/typescript": "^2.5.1",
-        "@graphql-codegen/typescript-graphql-request": "^4.4.10",
-        "@graphql-codegen/typescript-operations": "^2.4.2",
-        "@graphql-codegen/typescript-react-apollo": "^3.2.16",
+        "@graphql-codegen/cli": "^2.11.2",
+        "@graphql-codegen/typescript": "^2.7.2",
+        "@graphql-codegen/typescript-graphql-request": "^4.5.2",
+        "@graphql-codegen/typescript-operations": "^2.5.2",
         "@types/clientjs": "^0.2.0",
         "@types/jest": "^26.0.20",
         "@types/json-stringify-safe": "^5.0.0",
@@ -48,6 +46,7 @@
     "dependencies": {
         "@highlight-run/rrweb": "2.0.17",
         "@rollup/plugin-commonjs": "^22.0.1",
+        "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.3.0",
         "@rollup/plugin-replace": "^4.0.0",
         "@rollup/plugin-typescript": "^8.3.3",
@@ -63,7 +62,6 @@
         "rollup-plugin-dev": "^2.0.4",
         "rollup-plugin-esbuild": "^4.9.1",
         "rollup-plugin-filesize": "^9.1.2",
-        "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-web-worker-loader": "^1.6.1",
         "stacktrace-js": "2.0.2"
