--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -49,6 +49,8 @@ jobs:
               uses: actions/setup-go@v3
               with:
                 go-version: '>=1.18.x'
+            - name: Format (Print)
+              run: gofmt -l -d ./backend
             - name: Format
               run: if [ "$(gofmt -l -d ./backend | wc -l)" -gt 0 ]; then exit 1; fi
             - name: Run linter
@@ -76,12 +78,12 @@ jobs:
               if: ${{ needs.changes.outputs.private-graph == 'true' }}
               run: |
                 cd backend/
-                make private-gen 
+                make private-gen
             - name: Make public graph
               if: ${{ needs.changes.outputs.public-graph == 'true' }}
               run: |
                 cd backend/
-                make public-gen 
+                make public-gen
             - name: Diff Check
               run: |
                 diff -r backend/ tmp/
