--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -49,10 +49,8 @@ jobs:
               uses: actions/setup-go@v3
               with:
                 go-version: '>=1.18.x'
-            - name: Format (Print)
-              run: gofmt -l -d ./backend
             - name: Format
-              run: if [ "$(gofmt -l -d ./backend | wc -l)" -gt 0 ]; then exit 1; fi
+              run: if [ "$(gofmt -l -d ./backend | wc -l)" -gt 0 ]; then gofmt -l -d ./backend && exit 1; fi
             - name: Run linter
               uses: golangci/golangci-lint-action@v3
               with:
