--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@highlight-run/client",
     "private": true,
-    "version": "1.1.11",
+    "version": "1.1.12",
     "description": "rollup setup for writing a javascript library and making it availabe as script or npm package",
     "main": "dist/index.js",
     "module": "dist/index.mjs",
@@ -29,7 +29,6 @@
         "@graphql-codegen/typescript": "^2.7.2",
         "@graphql-codegen/typescript-graphql-request": "^4.5.2",
         "@graphql-codegen/typescript-operations": "^2.5.2",
-        "@types/clientjs": "^0.2.0",
         "@types/jest": "^26.0.20",
         "@types/json-stringify-safe": "^5.0.0",
         "@types/node": "^16.3.1",
@@ -44,13 +43,13 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "@highlight-run/fingerprintjs": "^3.3.5",
         "@highlight-run/rrweb": "2.1.7",
         "@rollup/plugin-commonjs": "^22.0.1",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.3.0",
         "@rollup/plugin-replace": "^4.0.0",
         "@rollup/plugin-typescript": "^8.3.3",
-        "clientjs": "0.2.1",
         "error-stack-parser": "2.0.6",
         "esbuild": "^0.14.47",
         "graphql": "^16.5.0",
