--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -50,7 +50,7 @@ jobs:
               with:
                 go-version: '1.18'
             - name: Format
-              run: if [ "$(gofmt -l -d ./backend | wc -l)" -gt 0 ]; then exit 1; fi
+              run: if [ "$(gofmt -l -d ./backend | wc -l)" -gt 0 ]; then gofmt -l -d ./backend && exit 1; fi
             - name: Run linter
               uses: golangci/golangci-lint-action@v3
               with:
@@ -76,12 +76,12 @@ jobs:
               if: ${{ needs.changes.outputs.private-graph == 'true' }}
               run: |
                 cd backend/
-                make private-gen 
+                make private-gen
             - name: Make public graph
               if: ${{ needs.changes.outputs.public-graph == 'true' }}
               run: |
                 cd backend/
-                make public-gen 
+                make public-gen
             - name: Diff Check
               run: |
                 diff -r backend/ tmp/
