--- a/firstload/package.json
+++ b/firstload/package.json
@@ -1,13 +1,13 @@
 {
     "name": "highlight.run",
-    "version": "4.3.2",
+    "version": "4.3.4",
     "scripts": {
         "build": "tsc && rollup -c",
         "dev": "doppler run -- rollup -c -w",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}'",
         "test": "jest --detectOpenHandles"
     },
-    "main": "dist/firstload/src/index.js",
+    "main": "dist/index.js",
     "types": "dist/firstload/src/index.d.ts",
     "license": "MIT",
     "devDependencies": {
