--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "@apollo/client": "3.4.17",
         "@datadog/browser-logs": "^4.13.0",
+        "@emotion/cache": "^11.10.1",
+        "@emotion/sheet": "^1.2.0",
         "@highlight-run/react": "^1.1.6",
         "@highlight-run/react-mentions": "4.4.1",
         "@highlight-run/react-select": "^5.2.2",
@@ -18,6 +20,7 @@
         "classnames": "^2.2.6",
         "color-hash": "^2.0.1",
         "dinero.js": "^2.0.0-alpha.8",
+        "domutils": "^3.0.1",
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "firebase": "^8.10.1",
         "framer-motion": "^4.1.17",
@@ -72,6 +75,7 @@
         "source-map-explorer": "^2.5.2",
         "stacktrace-js": "^2.0.2",
         "subscriptions-transport-ws": "^0.11.0",
+        "symbol-observable": "^4.0.0",
         "use-http": "^1.0.26",
         "use-query-params": "^1.2.0",
         "validator": "13.7.0"
@@ -159,10 +163,10 @@
         "ts-jest": "^27.1.4",
         "typed-scss-modules": "^3.4.0",
         "typescript": "^4.7.4",
-        "vite": "^2.9.15",
+        "vite": "^3.0.9",
         "vite-plugin-env-compatible": "^1.1.1",
         "vite-plugin-imp": "^2.2.0",
-        "vite-plugin-svgr": "^1.1.0",
+        "vite-plugin-svgr": "^2.2.1",
         "vite-tsconfig-paths": "^3.5.0"
     },
     "resolutions": {
