--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -9,6 +9,18 @@ on:
             - '.github/workflows/backend.yml'
             - '!backend/migrations'
 jobs:
+    # Testing the migrate job.
+    migrate-database:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: Setup Go
+              uses: actions/setup-go@v3
+            - name:
+              with:
+                go-version: '1.18'
+            - run: go version
     changes:
         runs-on: ubuntu-latest
         # Set job outputs to values from filter step
