--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -21,6 +21,7 @@ jobs:
                 go-version: '1.18'
             - run: go version
     changes:
+        needs: migrate-database
         runs-on: ubuntu-latest
         # Set job outputs to values from filter step
         outputs:
