--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - run: go version
     changes:
         needs: migrate-database
