--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -33,7 +33,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - uses: dorny/paths-filter@v2
               id: filter
               with:
@@ -50,7 +50,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
     code-quality-check:
         needs: code-setup
         runs-on: ubuntu-latest
@@ -60,7 +60,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - name: Format
               run: if [ "$(gofmt -l -d ./backend | wc -l)" -gt 0 ]; then gofmt -l -d ./backend && exit 1; fi
             - name: Run linter
@@ -79,7 +79,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - name: copy backend
               run: |
                 mkdir tmp
@@ -106,7 +106,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - name: Build binary
               run: cd backend/ && go build .
     test:
@@ -139,6 +139,6 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - name: Run tests
               run: cd backend && go test -p 1 ./... -v
