--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,9 +19,16 @@ jobs:
               uses: actions/setup-go@v3
               with:
                 go-version-file: 'backend/go.mod'
-            - run: |
-                cd backend/
-                make migrate
+            - name: Install CLI
+              uses: dopplerhq/cli-action@v1
+            - name: Print secret names
+              run: doppler secrets --only-names
+              env:
+                DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
+            # - name: Migrate database
+            #   run: |
+            #     cd backend/
+            #     make migrate
     changes:
         needs: migrate-database
         runs-on: ubuntu-latest
