--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -10,6 +10,7 @@ on:
             - '!backend/migrations'
 jobs:
     changes:
+        needs: migrate-database
         runs-on: ubuntu-latest
         # Set job outputs to values from filter step
         outputs:
@@ -21,7 +22,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - uses: dorny/paths-filter@v2
               id: filter
               with:
@@ -38,7 +39,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
     code-quality-check:
         needs: code-setup
         runs-on: ubuntu-latest
@@ -48,7 +49,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - name: Format
               run: if [ "$(gofmt -l -d ./backend | wc -l)" -gt 0 ]; then gofmt -l -d ./backend && exit 1; fi
             - name: Run linter
@@ -67,7 +68,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - name: copy backend
               run: |
                 mkdir tmp
@@ -94,7 +95,7 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - name: Build binary
               run: cd backend/ && go build .
     test:
@@ -127,6 +128,6 @@ jobs:
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '1.18'
+                go-version-file: 'backend/go.mod'
             - name: Run tests
               run: cd backend && go test -p 1 ./... -v
