--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,25 @@ on:
             - 'deploy/**'
             - '.github/workflows/deploy.yml'
 jobs:
+    migrate-database:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: Setup Go
+              uses: actions/setup-go@v3
+              with:
+                go-version-file: 'backend/go.mod'
+            - name: Install Doppler CLI
+              uses: dopplerhq/cli-action@v1
+            - name: Migrate database
+              run: |
+                cd backend/
+                make migrate
+              env:
+                DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
     deploy_backend:
+        needs: migrate-database
         runs-on: ubuntu-latest
         steps:
             - name: Check out the repo
@@ -86,7 +104,7 @@ jobs:
                 task-definition: ${{ steps.image-metric-monitor.outputs.task-definition }}
                 service: metric-monitor
                 cluster: highlight-production-cluster
-          # Edit and deploy public worker
+            # Edit and deploy public worker
             - name: Replace image label for public worker service
               id: image-public-worker
               uses: aws-actions/amazon-ecs-render-task-definition@v1
