--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -130,3 +130,5 @@ jobs:
                 go-version-file: 'backend/go.mod'
             - name: Run tests
               run: cd backend && go test -p 1 ./... -v
+              env:
+                LOG_LEVEL: debug
