--- a/firstload/package.json
+++ b/firstload/package.json
@@ -1,8 +1,8 @@
 {
     "name": "highlight.run",
-    "version": "4.3.6",
+    "version": "4.3.7",
     "scripts": {
-        "build": "rollup -c",
+        "build": "tsc && rollup -c",
         "dev": "doppler run -- rollup -c -w",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}'",
         "test": "jest --detectOpenHandles"
