--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,13 +77,12 @@
         "validator": "13.7.0"
     },
     "scripts": {
-        "start": "HTTPS=true doppler run -- craco start",
+        "start": "HTTPS=true doppler run -- vite",
         "styles": "tsm src -w --logLevel=error",
         "gql": "graphql-codegen --config --watch codegen.yml",
         "gql:nowatch": "graphql-codegen --config codegen.yml",
-        "build": "craco build",
-        "test": "craco test",
-        "eject": "react-scripts eject",
+        "build": "vite build",
+        "test": "vitest",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}' && yarn lint:es && stylelint \"**/*.scss\"",
         "lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
         "lint:css": "stylelint \"**/*.scss\" --fix",
@@ -139,6 +138,7 @@
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^5.30.6",
         "@typescript-eslint/parser": "^5.30.6",
+        "@vitejs/plugin-react": "^2.0.1",
         "craco-antd": "^1.19.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^7.2.0",
@@ -157,7 +157,10 @@
         "stylelint-config-standard": "^26.0.0",
         "stylelint-prettier": "^2.0.0",
         "typed-scss-modules": "^3.4.0",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "vite": "^3.0.9",
+        "vite-plugin-svgr": "^2.2.1",
+        "vite-tsconfig-paths": "^3.5.0"
     },
     "resolutions": {
         "**/postcss-custom-properties": "^12.1.7",
