--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
         "lottie-react": "^2.1.0",
         "moment": "2.29.4",
         "prop-types": "^15.5.7",
-        "query-string": "6.14.1",
+        "query-string": "^6",
         "randomcolor": "^0.6.2",
         "re-resizable": "^6.9.1",
         "react": "^16.13.1",
@@ -39,17 +39,14 @@
         "react-confetti": "^6.0.1",
         "react-copy-to-clipboard": "^5.0.2",
         "react-date-range": "^1.4.0",
-        "react-device-detect": "^2.0.1",
         "react-dom": "^16.13.1",
         "react-draggable": "^4.4.3",
         "react-files-hooks": "^2.0.0",
-        "react-firebase-hooks": "^2.2.0",
         "react-grid-layout": "^1.3.3",
         "react-helmet": "^6.1.0",
         "react-highlight-words": "^0.17.0",
         "react-hotkeys-hook": "^3.3.1",
         "react-icons": "^3.11.0",
-        "react-infinite-scroll-hook": "^3.0.0",
         "react-json-view": "^1.21.3",
         "react-lines-ellipsis": "^0.14.1",
         "react-linkify": "^1.0.0-alpha",
@@ -60,7 +57,6 @@
         "react-router-dom": "^5.2.0",
         "react-select": "^3.1.1",
         "react-slider": "^2.0.1",
-        "react-snowfall": "^1.1.1",
         "react-spinners": "^0.13.2",
         "react-syntax-highlighter": "^15.4.4",
         "react-text-transition": "^1.3.0",
@@ -71,7 +67,6 @@
         "source-map-explorer": "^2.5.2",
         "stacktrace-js": "^2.0.2",
         "subscriptions-transport-ws": "^0.11.0",
-        "use-http": "^1.0.26",
         "use-query-params": "^1.2.0",
         "validator": "13.7.0",
         "xss": "^1.0.14"
@@ -105,7 +100,6 @@
         ]
     },
     "devDependencies": {
-        "@craco/craco": "^6.4.5",
         "@graphql-codegen/cli": "^1.20.1",
         "@graphql-codegen/import-types-preset": "^1.18.1",
         "@graphql-codegen/named-operations-object": "^2.1.0",
@@ -134,12 +128,10 @@
         "@types/react-select": "^3.0.28",
         "@types/react-slider": "^1.3.1",
         "@types/react-syntax-highlighter": "^13.5.2",
-        "@types/sanitize-html": "^2.6.2",
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^5.30.6",
         "@typescript-eslint/parser": "^5.30.6",
         "@vitejs/plugin-react": "^2.0.1",
-        "craco-antd": "^1.19.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-prettier": "^3.3.1",
@@ -149,7 +141,6 @@
         "postcss": "^8.3.3",
         "postcss-custom-properties": "^12.1.7",
         "prettier": "^2.2.1",
-        "react-scripts": "4.0.3",
         "sass": "^1.50.1",
         "stylelint": "^14.9.1",
         "stylelint-config-prettier": "^9.0.3",
