--- a/frontend/package.json
+++ b/frontend/package.json
@@ -130,6 +130,7 @@
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^5.30.6",
         "@typescript-eslint/parser": "^5.30.6",
+        "@vitejs/plugin-basic-ssl": "^0.1.2",
         "@vitejs/plugin-react": "^2.0.1",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^7.2.0",
