--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -129,6 +129,8 @@ jobs:
                   zip getProjectIds.zip getProjectIds
                   go build ./lambda-functions/digests/getDigestData
                   zip getDigestData.zip getDigestData
+                  go build ./lambda-functions/digests/sendDigestEmails
+                  zip sendDigestEmails.zip sendDigestEmails
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v1
               with:
@@ -142,6 +144,8 @@ jobs:
                   aws lambda update-function-configuration --function-name getProjectIds \
                     --environment "$(doppler secrets download --no-file | jq '{Variables: .}')"
                   aws lambda update-function-configuration --function-name getDigestData \
+                    --environment "$(doppler secrets download --no-file | jq '{Variables: .}')"
+                  aws lambda update-function-configuration --function-name sendDigestEmails \
                     --environment "$(doppler secrets download --no-file | jq '{Variables: .}')"
             - name: Deploy getProjectIds
               uses: appleboy/lambda-action@master
@@ -159,6 +163,14 @@ jobs:
                   aws_region: us-east-2
                   function_name: getDigestData
                   zip_file: backend/getDigestData.zip
+            - name: Deploy sendDigestEmails
+              uses: appleboy/lambda-action@master
+              with:
+                  aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws_region: us-east-2
+                  function_name: sendDigestEmails
+                  zip_file: backend/sendDigestEmails.zip
     deploy_backend:
         needs: migrate-database
         runs-on: ubuntu-latest
