--- a/frontend/package.json
+++ b/frontend/package.json
@@ -97,7 +97,8 @@
 		"test:watch": "TZ=UTC vitest",
 		"types:check": "tsc -noEmit",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
-		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es"
+		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es",
+		"typegen": "tsc"
 	},
 	"browserslist": {
 		"production": [
