--- a/turbo.json
+++ b/turbo.json
@@ -5,28 +5,22 @@
 			"inputs": ["./**/*.gql", "./**/*.graphqls"],
 			"outputs": ["src/graph/generated/**"]
 		},
-		"dev": {
-			"dependsOn": ["^prepublish", "^build"],
-			"cache": false
-		},
-		"typegen": {
-			"inputs": ["src/**/*.tsx", "src/**/*.ts", "tsconfig.json"],
-			"outputs": ["dist/**/*.d.ts", "typings/**"]
-		},
 		"prepublish": {
 			"dependsOn": ["^prepublish"],
 			"outputs": ["lib/**", "es/**", "dist/**", "typings/**"]
 		},
-		"@highlight-run/client#typegen": {
-			"dependsOn": ["^prepublish"],
-			"outputs": ["lib/**", "es/**", "dist/**", "typings/**"]
+		"typegen": {
+			"dependsOn": ["^typegen", "^prepublish"],
+			"inputs": ["src/**/*.tsx", "src/**/*.ts", "tsconfig.json"],
+			"outputs": ["dist/**/*.d.ts"]
 		},
 		"highlight.run#typegen": {
 			"dependsOn": ["@highlight-run/client#typegen"],
-			"outputs": ["dist/**/*.d.ts", "typings/**"]
+			"outputs": ["dist/**/*.d.ts"]
 		},
-		"frontend#typegen": {
-			"dependsOn": ["highlight.run#typegen"]
+		"dev": {
+			"dependsOn": ["^prepublish", "^build"],
+			"cache": false
 		},
 		"build": {
 			"dependsOn": ["codegen", "typegen", "^prepublish", "^build"],
