--- a/turbo.json
+++ b/turbo.json
@@ -5,25 +5,22 @@
 			"inputs": ["./**/*.gql", "./**/*.graphqls"],
 			"outputs": ["src/graph/generated/**"]
 		},
-		"dev": {
-			"dependsOn": ["^prepublish", "^build"],
-			"cache": false
-		},
-		"typegen": {
-			"inputs": ["src/**/*.tsx", "src/**/*.ts", "tsconfig.json"],
-			"outputs": ["dist/**/*.d.ts", "typings/**"]
-		},
-		"@highlight-run/client#typegen": {
-			"dependsOn": ["^prepublish"],
-			"outputs": ["lib/**", "es/**", "dist/**", "typings/**"]
-		},
-		"highlight.run#typegen": {
-			"dependsOn": ["@highlight-run/client#typegen"],
-			"outputs": ["dist/**/*.d.ts", "typings/**"]
-		},
 		"prepublish": {
 			"dependsOn": ["^prepublish"],
 			"outputs": ["lib/**", "es/**", "dist/**", "typings/**"]
+		},
+		"typegen": {
+			"dependsOn": ["^typegen", "^prepublish"],
+			"inputs": ["src/**/*.tsx", "src/**/*.ts", "tsconfig.json"],
+			"outputs": ["dist/**/*.d.ts"]
+		},
+		"highlight.run#typegen": {
+			"dependsOn": ["@highlight-run/client#typegen"],
+			"outputs": ["dist/**/*.d.ts"]
+		},
+		"dev": {
+			"dependsOn": ["^prepublish", "^build"],
+			"cache": false
 		},
 		"build": {
 			"dependsOn": ["codegen", "typegen", "^prepublish", "^build"],
@@ -64,5 +61,6 @@
 			"env": ["HIGHLIGHT_API_KEY"]
 		}
 	},
-	"globalEnv": ["DOPPLER_TOKEN"]
+	"globalEnv": ["DOPPLER_TOKEN"],
+	"globalDependencies": ["package.json", "yarn.lock"]
 }
