--- a/firstload/package.json
+++ b/firstload/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "highlight.run",
-	"version": "5.1.4",
+	"version": "5.1.5",
 	"scripts": {
 		"build": "yarn typegen && rollup -c",
 		"dev": "doppler run -- rollup -c -w",
@@ -10,7 +10,7 @@
 	},
 	"main": "dist/index.js",
 	"module": "dist/indexESM.js",
-	"types": "dist/src/index.d.ts",
+	"types": "dist/firstload/src/index.d.ts",
 	"license": "MIT",
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^22.0.1",
