--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
 		"dev:frontend": "yarn turbo run dev --filter frontend...",
 		"dev:redis": "redis-server",
 		"enforce-size": "yarn turbo run enforce-size --filter frontend...",
-		"format-check": "prettier --check --ignore-unknown . \"!./data\" \"!./docs\"",
-		"format:all": "prettier --write --ignore-unknown . \"!./data\" \"!./docs\"",
+		"format-check": "prettier --check --ignore-unknown . \"!./data\" \"!./docs\" \"!./rrweb\"",
+		"format:all": "prettier --write --ignore-unknown . \"!./data\" \"!./docs\" \"!./rrweb\"",
 		"frontend:start": "yarn dev:frontend",
 		"g": "yarn generate",
 		"generate": "hygen",
