--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,8 @@
 			"dependsOn": [
 				"^typegen",
 				"^prepublish",
-				"@highlight-run/rrweb#prepublish"
+				"@highlight-run/rrweb#prepublish",
+				"@highlight-run/client#typegen"
 			],
 			"inputs": ["src/**/*.tsx", "src/**/*.ts", "tsconfig.json"],
 			"outputs": ["dist/**/*.d.ts"]
