--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,13 @@
 			"outputs": ["dist/**/*.d.ts"]
 		},
 		"highlight.run#typegen": {
-			"dependsOn": ["@highlight-run/client#typegen"],
+			"dependsOn": [
+				"^typegen",
+				"^prepublish",
+				"@highlight-run/rrweb#prepublish",
+				"@highlight-run/client#typegen"
+			],
+			"inputs": ["src/**/*.tsx", "src/**/*.ts", "tsconfig.json"],
 			"outputs": ["dist/**/*.d.ts"]
 		},
 		"dev": {
