--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -1,6 +1,7 @@
 name: E2E Test
 on:
-    push:
+    pull_request:
+        types: ['opened', 'synchronize']
         branches:
             - '**'
             - '!master'
@@ -19,6 +20,7 @@ jobs:
     test:
         name: End-to-end Cypress Testing
         runs-on: ubuntu-latest
+        if: ${{ !github.event.pull_request.draft }}
         timeout-minutes: 30
         env:
             ENVIRONMENT: test
